Add ISO 15919 transliterations

--- a/sanskrit.yaml
+++ b/sanskrit.yaml
@@ -2,131 +2,182 @@
 - - अंसफलक
   - :slp1: aMsaPalaka
     :hk: aMsaphalaka
+    :iso: aṁsaphalaka
 - - अंसपृष्ठ
   - :slp1: aMsapfzWa
     :hk: aMsapRSTha
+    :iso: aṁsapr̥ṣṭha
 - - आयुर्वेद
   - :slp1: Ayurveda
     :hk: Ayurveda
+    :iso: āyurvēda
 - - अस्मि
   - :slp1: asmi
     :hk: asmi
+    :iso: asmi
 - - भवामि
   - :slp1: BavAmi
     :hk: bhavAmi
+    :iso: bhavāmi
 - - छत्रम्
   - :slp1: Catram
     :hk: chatram
+    :iso: chatram
 - - चित्रस
   - :slp1: citrasa
     :hk: citrasa
+    :iso: citrasa
 - - ध्यान
   - :slp1: DyAna
     :hk: dhyAna
+    :iso: dhyāna
 - - ऋषि
   - :slp1: fzi
     :hk: RSi
+    :iso: r̥ṣi
 - - गृह्णीवः
   - :slp1: gfhRIvaH
     :hk: gRhNIvaH
+    :iso: gr̥hṇīvaḥ
 - - गौरह
   - :slp1: gOraha
     :hk: gauraha
+    :iso: gauraha
 - - काराइट
   - :slp1: kArAiwa
     :hk: kArAiTa
+    :iso: kārāiṭa
 - - करोति
   - :slp1: karoti
     :hk: karoti
+    :iso: karōti
 - - करोषि
   - :slp1: karozi
     :hk: karoSi
+    :iso: karōṣi
 - - कृ
   - :slp1: kf
     :hk: kR
+    :iso: kr̥
 - - कुङ्कुमं
   - :slp1: kuNkumaM
     :hk: kuGkumaM
+    :iso: kuṅkumaṁ
 - - कुरुथः
   - :slp1: kuruTaH
     :hk: kuruthaH
+    :iso: kuruthaḥ
 - - कुर्वन्ति
   - :slp1: kurvanti
     :hk: kurvanti
+    :iso: kurvanti
 - - नयनम्सुख्
   - :slp1: nayanamsuK
     :hk: nayanamsukh
+    :iso: nayanamsukh
 - - नीलगौः
   - :slp1: nIlagOH
     :hk: nIlagauH
+    :iso: nīlagauḥ
 - - पिबामि
   - :slp1: pibAmi
     :hk: pibAmi
+    :iso: pibāmi
 - - पूषन्
   - :slp1: pUzan
     :hk: pUSan
+    :iso: pūṣan
 - - राज्य
   - :slp1: rAjya
     :hk: rAjya
+    :iso: rājya
 - - सामवेद
   - :slp1: sAmaveda
     :hk: sAmaveda
+    :iso: sāmavēda
 - - संघ
   - :slp1: saMGa
     :hk: saMgha
+    :iso: saṁgha
 - - उपविशामि
   - :slp1: upaviSAmi
     :hk: upavizAmi
+    :iso: upaviśāmi
 - - वद्
   - :slp1: vad
     :hk: vad
+    :iso: vad
 - - वदामः
   - :slp1: vadAmaH
     :hk: vadAmaH
+    :iso: vadāmaḥ
 - - वदामि
   - :slp1: vadAmi
     :hk: vadAmi
+    :iso: vadāmi
 - - आसन
   - :hk: Asana
+  - :iso: āsana
 - - शिव
   - :hk: ziva
+    :iso: śiva
 - - संस्कृत
   - :hk: saMskRta
+    :iso: saṁskr̥ta
 - - मूलाधार
   - :hk: mUlAdhAra
+    :iso: mūlādhāra
 - - विकॢप्
   - :hk: viklRp
+    :iso: vikl̥p
 - - क्ष्
   - :hk: kS
+    :iso: kṣ
 - - ज्ञ्
   - :hk: jJ
+    :iso: jñ
 - - चक्र
   - :hk: cakra
+    :iso: cakra
 - - प्रतिष्ठा
   - :hk: pratiSThA
+    :iso: pratiṣṭhā
 - - अङ्ग
   - :hk: aGga
+    :iso: aṅga
 - - अंश
   - :hk: aMza
+    :iso: aṁśa
 - - महाभारत
   - :hk: mahAbhArata
+    :iso: mahābhārata
 - - कृष्ण
   - :hk: kRSNa
+    :iso: kr̥ṣṇa
 - - राम
   - :hk: rAma
+    :iso: rāma
 - - अन्तःकरण
   - :hk: antaHkaraNa
+    :iso: antaḥkaraṇa
 - - ज्ञान
   - :hk: jJAna
+    :iso: jñāna
 - - क्षोभ
   - :hk: kSobha
+    :iso: kṣōbha
 - - चक्र
   - :hk: cakra
+    :iso: cakra
 - - सूत्र
   - :hk: sUtra
+    :iso: sūtra
 - - इच्छा
   - :hk: icchA
+    :iso: icchā
 - - शास्त्र
   - :hk: zAstra
+    :iso: śāstra
 - - पतञ्जलि
   - :hk: pataJjali
+    :iso: patañjali
