Add one example of U+090C DEVANAGARI LETTER VOCALIC L

--- a/sanskrit.yaml
+++ b/sanskrit.yaml
@@ -15,6 +15,10 @@
   - :slp1: asmi
     :hk: asmi
     :iso: asmi
+- - अजमीऌह
+  - :slp1: ajamILha
+    :hk: ajamIlRha
+    :iso: ajamīl̥ha
 - - भवामि
   - :slp1: BavAmi
     :hk: bhavAmi
