Add one example of U+0944 DEVANAGARI LETTER VOCALIC RR

--- a/sanskrit.yaml
+++ b/sanskrit.yaml
@@ -19,6 +19,10 @@
   - :slp1: ajamILha
     :hk: ajamIlRha
     :iso: ajamīl̥ha
+- - अतितॄ
+  - :slp1: atitF
+    :hk: atitRR
+    :iso: atitr̥̄
 - - भवामि
   - :slp1: BavAmi
     :hk: bhavAmi
