Fix SLP1 example of U+090C DEVANAGARI LETTER VOCALIC L

--- a/sanskrit.yaml
+++ b/sanskrit.yaml
@@ -16,7 +16,7 @@
     :hk: asmi
     :iso: asmi
 - - अजमीऌह
-  - :slp1: ajamILha
+  - :slp1: ajamIxha
     :hk: ajamIlRha
     :iso: ajamīl̥ha
 - - अतितॄ
