--- a/sanskrit.yaml
+++ b/sanskrit.yaml
@@ -189,3 +189,15 @@
 - - पतञ्जलि
   - :hk: pataJjali
     :iso: patañjali
+- - ईड्
+  - :slp1: Iq
+  - :hk: ID
+  - :iso: īḍ
+- - ईळ्
+  - :slp1: IL
+  - :hk: IL
+  - :iso: īḷ
+- - ईळिषे
+  - :slp1: ILize
+  - :hk: ILiSe
+  - :iso: īḷiṣē
