Fix `ID` and `IL` examples

--- a/sanskrit.yaml
+++ b/sanskrit.yaml
@@ -191,13 +191,13 @@
     :iso: patañjali
 - - ईड्
   - :slp1: Iq
-  - :hk: ID
-  - :iso: īḍ
+    :hk: ID
+    :iso: īḍ
 - - ईळ्
   - :slp1: IL
-  - :hk: IL
-  - :iso: īḷ
+    :hk: IL
+    :iso: īḷ
 - - ईळिषे
   - :slp1: ILize
-  - :hk: ILiSe
-  - :iso: īḷiṣē
+    :hk: ILiSe
+    :iso: īḷiṣē
