Add various examples for less frequent characters

--- a/sanskrit.yaml
+++ b/sanskrit.yaml
@@ -201,3 +201,43 @@
   - :slp1: ILize
     :hk: ILiSe
     :iso: īḷiṣē
+- - ऽशः
+  - :slp1: "'SaH"
+    :hk: "'zaH"
+    :iso: "'śaḥ"
+- - षोडशों
+  - :slp1: zoqaSoM
+    :hk: SoDazoM
+    :iso: ṣōḍaśōṁ
+- - अगूढगन्ध
+  - :slp1: agUQaganDa
+    :hk: agUDhagandha
+    :iso: agūḍhagandha
+- - अज्झटा
+  - :slp1: ajJawA
+    :hk: ajjhaTA
+    :iso: ajjhaṭā
+- - ऊति
+  - :slp1: Uti
+    :hk: Uti
+    :iso: ūti
+- - ॠकार
+  - :slp1: FkAra
+    :hk: RRkAra
+    :iso: r̥̄kāra
+- - ॡ
+  - :slp1: X
+    :hk: lRR
+    :iso: l̥̄
+- - ओहस्
+  - :slp1: ohas
+    :hk: ohas
+    :iso: ōhas
+- - औष्ण्य
+  - :slp1: OzRya
+    :hk: auSNya
+    :iso: auṣṇya
+- - अनुकॢप्
+  - :slp1: anukxp
+    :hk: anuklRp
+    :iso: anukl̥p
