Use `e` instead of `ē` in ISO15919
It has been suggested in cceh/sanskrit-web#65 that ए/◌े should be
tranliterated as `e`, not `ē`, because the `e` is inherently long
in Sanskrit.

--- a/sanskrit-accents.yaml
+++ b/sanskrit-accents.yaml
@@ -16,7 +16,7 @@
     :iso: ā́tavāyana
 - - अस्मे॔
   - :slp1: asme/
-    :iso: asmḗ
+    :iso: asmé
 - - शप्त॔
   - :slp1: Sapta/
     :slp1_headword2: Sapt/a
@@ -29,7 +29,7 @@
     :iso: va̲yaṁ
 - - अग्ने॒
   - :slp1: agne\
-    :iso: agnē̲
+    :iso: agne̲
 - - महो॑भिः
   - :slp1: maho^BiH
     :iso: mahṑbhiḥ
