--- a/sanskrit.yaml
+++ b/sanskrit.yaml
@@ -10,7 +10,7 @@
 - - आयुर्वेद
   - :slp1: Ayurveda
     :hk: Ayurveda
-    :iso: āyurvēda
+    :iso: āyurveda
 - - अस्मि
   - :slp1: asmi
     :hk: asmi
@@ -102,7 +102,7 @@
 - - सामवेद
   - :slp1: sAmaveda
     :hk: sAmaveda
-    :iso: sāmavēda
+    :iso: sāmaveda
 - - संघ
   - :slp1: saMGa
     :hk: saMgha
@@ -200,7 +200,7 @@
 - - ईळिषे
   - :slp1: ILize
     :hk: ILiSe
-    :iso: īḷiṣē
+    :iso: īḷiṣe
 - - षोडशों
   - :slp1: zoqaSoM
     :hk: SoDazoM
