Add example to test the addition of virama after U+091C DEVANAGARI LETTER JA
The cceh/sanskrit-web#60 pointed out that in some cases no virama was
produced after a final `j` character in SLP1.

--- a/sanskrit.yaml
+++ b/sanskrit.yaml
@@ -233,6 +233,10 @@
   - :slp1: OzRya
     :hk: auSNya
     :iso: auṣṇya
+- - ऊर्ज्
+  - :slp1: Urj
+    :hk: Urj
+    :iso: ūrj
 - - अनुकॢप्
   - :slp1: anukxp
     :hk: anuklRp
